Fixed alignment in submission

--- a/webroot/css/default.css
+++ b/webroot/css/default.css
@@ -310,7 +310,7 @@ a:hover.submissiontopic{
 }
 
 .submissionstats{
-    margin:20px 0px 10px 0px;
+    margin:25px 0px 10px 0px;
 }
 
 .submissionmeta a:hover{
